--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, maximum-scale=1">
-<title>Ballet One page free website template</title>
+<title>北京怀儒科技有限公司 - 小程序开发、App开发、嵌入式系统开发、ThreeJS</title>
 <link rel="icon" href="favicon.png" type="image/png">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/style.css" rel="stylesheet" type="text/css"> 
@@ -59,7 +59,6 @@
             <div class="top_left_cont zoomIn wow animated"> 
               <h2>提供<strong>快速、可靠、高效</strong>的技术产品和开发服务</h2>
               <p></p>
-              <a href="#service" class="read_more2">Read more</a> </div>
           </div>
           <div class="col-lg-7 col-sm-5">
 			<img src="img/main_device_image.png" class="zoomIn wow animated" alt="" />
@@ -160,14 +159,14 @@
 		<div class="control-group">
 		<div class="controls">
 		<input type="text" class="form-control input-text" 
-		placeholder="Full Name" id="name" required
+		placeholder="您的姓名" id="name" required
 		data-validation-required-message="Please enter your name" />
 		<p class="help-block"></p>
 		</div>
 		</div> 	
 		<div class="control-group">
 		<div class="controls">
-		<input type="email" class="form-control input-text" placeholder="Email" 
+		<input type="email" class="form-control input-text" placeholder="邮箱" 
 		id="email" required
 		data-validation-required-message="Please enter your email" />
 		</div>
@@ -192,7 +191,7 @@
     </section>
   </div>
   <div class="container">
-    <div class="footer_bottom"><span>Copyright © 2017, Template by <a href="https://webthemez.com/free-bootstrap-templates/">WebThemez.com</a> </span> </div>
+    <div class="footer_bottom"><span><a href="https://beian.miit.gov.cn/" target="_blank">京ICP备2023007361号</a>  </span> </div>
   </div>
 </footer>
 
